# multistage-build

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: python-test.yml
multistage_build/: __init__.py  _build_backend.py
multistage_build/tests/: test_build_backend.py
