[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]==7.*"]
build-backend = "setuptools.build_meta"

[project]
name = "multistage-build"
dynamic = [
  "version",  # The version is taken directly from the repository, using setuptools-scm.
]
# description = "<Insert short description of the project>"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
authors = [
  { name = "Phil Elson", email = "philip.elson@cern.ch" },
]
requires-python = ">=3.7"

dependencies = [
  'tomli >= 1.1.0 ; python_version < "3.11"',
]

[project.optional-dependencies]
# The optional dependencies of the project, installable using the "extras" syntax.
test = [
  "build",
  "pytest",
]
doc = [
]
dev = [
  # Dependencies for development of the project, such as type checkers,
  # linters, etc.
  # "requirement-for-development-purposes-only",

  # Include the "test" and "doc" dependencies in the dev dependencies.
  "multistage-build[doc,test]",
]

[project.urls]
# Homepage = "<Insert your URL>"
# Repository = "<Insert your URL>"

[tool.setuptools.packages.find]
include = ["multistage_build", "multistage_build.*"]

[tool.setuptools.package-data]
# All package data which is tracked by git is included automatically due to
# include-package-data=true (the default) along with setuptools-scm. More details at:
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html#include-package-data

[tool.setuptools_scm]
# Tell setuptools_scm to write a _version.py file in the package. The
# _version.py file must not be committed to the repository.
# In future versions of setuptools-scm this option will be re-named to
# "version_file". Docs for this version can be
# found at https://acc-py-repo.cern.ch/browse/project/setuptools-scm/7.1.0
write_to = "multistage_build/_version.py"

[tool.acc_py_template]
features = [
  {name = "core", version = 2},
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_sort_within_sections = true
